<resources>
    <string name="app_name">ProjectManagerApp</string>
    <string name="project_planner">Project Planner</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="projects">My Projects</string>
    <string name="account">Account</string>
    <string name="help">Help</string>
    <string name="sign_out">Sign Out</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Yes</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_want_to_sign_out">Are you sure you want to sign out?</string>
    <string name="pick">Pick a project from the list!</string>
    <string name="tasks_in_project_x">Tasks in Project X</string>
    <string name="search">Search</string>
    <string name="project">Project</string>
    <string name="pick_project">Pick a task from the list!</string>
    <string name="project_x_info">Project X info</string>
    <string name="project_end_date">Project End Date:</string>
    <string name="project_start_date">Project Start Date:</string>
    <string name="project_client">Project Client:</string>
    <string name="project_approx_length">Project Approx. Length:</string>
    <string name="project_description">Project Description:</string>
    <string name="task_x_info">Task X Info</string>
    <string name="status">Status</string>
    <string name="in_progress">In Progress</string>
    <string name="task_description">Task Description</string>
    <string name="workers">Workers</string>
    <string name="start_date">Start Date</string>
    <string name="deadline">Deadline</string>
    <string name="milestones_in_project_x">Milestones in Project X</string>
    <string name="name">Name</string>
    <string name="user">User</string>
    <string name="discard">Discard</string>
    <string name="save">Save</string>
    <string name="extended_fab_content_desc">Save</string>
    <string name="extended_fab_label">Save</string>
    <string name="menu">menu</string>
    <string name="email_address">Email Address</string>
    <string name="text_label">Couldn\'t reach server!</string>
    <string name="action_text">Retry</string>
    <string name="upcoming_tasks">Upcoming tasks</string>
    <string name="milestone">Milestone</string>
    <string name="number_of_unfinished_tasks">Number of Unfinished Tasks:</string>
    <string name="_16">16</string>
    <string name="random_description">Random description</string>
    <string name="_7_days">7 days</string>
    <string name="_2022_10_01">2022.10.01.</string>
    <string name="_2022_09_01">2022.09.01.</string>
    <string name="my_role">My Role</string>
    <string name="random_role">Random Role</string>
    <string name="milestone_info">Milestone Info</string>
    <string name="description">Description</string>
    <string name="unspecified_deadline">Unspecified Deadline</string>
    <string name="unspecified_startdate">Unspecified Start Date</string>
    <string name="unspecified_length">Unspecified Estimated Length</string>
    <string name="proj_info">Here is some information on the project!</string>
    <string name="server_error">Couldn\'t reach server!</string>
    <string name="loading">Loading...</string>
    <string name="project_name">Project name</string>
    <string name="milestones">Milestones</string>
    <string name="all_tasks">All Tasks</string>
    <string name="pick_milestone">Pick a Milestone from the list!</string>
    <string name="prerequisite_tasks">Prerequisite Tasks</string>
    <string name="there_are_no_prerequisite_tasks">There are no Prerequisite Tasks!</string>
    <string name="invalid_pw_or_username">The username or the password you entered is not valid!!</string>
    <string-array name="status_array">
        <item>In Progress</item>
        <item>Not Started</item>
        <item>Stopped</item>
        <item>Done</item>
    </string-array>
</resources>