<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_account"
        android:icon="@drawable/ic_account_circle1"
        android:title="@string/account"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_sign_out"
                android:title="@string/sign_out" />
        </menu>
    </item>

    <item
        android:id="@+id/menu_help"
        android:icon="@drawable/ic_help"
        android:title="@string/help"
        app:showAsAction="ifRoom" />

</menu>