<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_project"
        android:icon="@drawable/ic_assignment"
        android:title="@string/project"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_sign_out"
        android:icon="@drawable/ic_account_circle1"
        android:title="@string/account"
        app:showAsAction="always">

    </item>
    <item
        android:id="@+id/menu_help"
        android:icon="@drawable/ic_help"
        android:title="@string/help"
        app:showAsAction="always" />
</menu>