<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="20dp"
    android:background="#372859EC"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarsingletask"
        android:layout_width="412dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ScrollView
        android:layout_width="407dp"
        android:layout_height="613dp"
        android:layout_below="@id/tvTaskName"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="3dp"
        android:contentDescription="@string/task_x_info">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/status"
                android:textSize="20sp" />


            <Spinner
                android:id="@+id/spStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/tvStartDate"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/start_date"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tStartDate"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="#77A8E4"
                android:text="2022.09.01."
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvEndDate"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/deadline"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tEndDate"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="#77A8E4"
                android:text="2022.10.01."
                android:textSize="16sp" />


            <TextView
                android:id="@+id/tvWorkers"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/workers"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tWorkers"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#77A8E4"
                android:scrollbarAlwaysDrawHorizontalTrack="false"
                android:text="Random Workers"
                android:textSize="16sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tvtDesc"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/task_description"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/ttDesc"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#77A8E4"
                android:scrollHorizontally="true"
                android:text="Random description"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tvTaskName"
        android:layout_width="414dp"
        android:layout_height="59dp"
        android:layout_below="@id/toolbarsingletask"
        android:fontFamily="sans-serif-medium"
        android:text="@string/task_x_info"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#081978"
        android:textSize="24sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/discardbtn"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="false"
        android:layout_marginStart="20dp"
        android:backgroundTint="#2196F3"
        android:text="@string/discard" />

    <Button
        android:id="@+id/savebtn"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:text="@string/save" />

</RelativeLayout>