<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#372859EC">


    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/loading"
        style="@style/Widget.App.CircularProgressIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="200dp"
        android:indeterminate="true"
        app:indicatorSize="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarsingleproject"
        android:layout_width="412dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollproject"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/tvProjectName"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="3dp"
        android:contentDescription="@string/project_x_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.82"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProjectName">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvStartDate"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/project_start_date"
                android:textColor="@color/md_theme_dark_onPrimary"
                android:textSize="20sp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/mtrl_card_spacing"
                android:layout_marginTop="@dimen/mtrl_card_spacing"
                android:layout_marginRight="@dimen/mtrl_card_spacing"
                android:background="@color/md_theme_dark_primary"
                android:backgroundTint="@color/md_theme_dark_primary"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.MaterialCardView.Cut">

                <TextView
                    android:id="@+id/tStartDate"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/md_theme_dark_primary"
                    android:gravity="center"
                    android:text="@string/_2022_09_01"
                    android:textColor="@color/md_theme_dark_inversePrimary"
                    android:textSize="16sp" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tvEndDate"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/project_end_date"
                android:textColor="@color/md_theme_dark_onPrimary"
                android:textSize="20sp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/mtrl_card_spacing"
                android:layout_marginTop="@dimen/mtrl_card_spacing"
                android:layout_marginRight="@dimen/mtrl_card_spacing"
                android:background="@color/md_theme_dark_primary"
                android:backgroundTint="@color/md_theme_dark_primary"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.MaterialCardView.Cut">

                <TextView
                    android:id="@+id/tvDeadline"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/md_theme_dark_primary"
                    android:gravity="center"
                    android:text="@string/_2022_10_01"
                    android:textColor="@color/md_theme_dark_inversePrimary"
                    android:textSize="16sp" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tvLength"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/project_approx_length"
                android:textColor="@color/md_theme_dark_onPrimary"
                android:textSize="20sp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/mtrl_card_spacing"
                android:layout_marginTop="@dimen/mtrl_card_spacing"
                android:layout_marginRight="@dimen/mtrl_card_spacing"
                android:background="@color/md_theme_dark_primary"
                android:backgroundTint="@color/md_theme_dark_primary"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.MaterialCardView.Cut">

                <TextView
                    android:id="@+id/tLength"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/md_theme_dark_primary"
                    android:gravity="center"
                    android:text="@string/_7_days"
                    android:textColor="@color/md_theme_dark_inversePrimary"
                    android:textSize="16sp" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tvDesc"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/project_description"
                android:textColor="@color/md_theme_dark_onPrimary"
                android:textSize="20sp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/mtrl_card_spacing"
                android:layout_marginTop="@dimen/mtrl_card_spacing"
                android:layout_marginRight="@dimen/mtrl_card_spacing"
                android:background="@color/md_theme_dark_primary"
                android:backgroundTint="@color/md_theme_dark_primary"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.MaterialCardView.Cut">

                <TextView
                    android:id="@+id/tDesc"
                    android:layout_width="match_parent"
                    android:layout_height="77dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/md_theme_dark_primary"
                    android:gravity="center_vertical"
                    android:text="@string/random_description"
                    android:textColor="@color/md_theme_dark_inversePrimary"
                    android:textSize="16sp" />
            </com.google.android.material.card.MaterialCardView>



            <TextView
                android:id="@+id/trole"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/my_role"
                android:textColor="@color/md_theme_dark_onPrimary"
                android:textSize="20sp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/mtrl_card_spacing"
                android:layout_marginTop="@dimen/mtrl_card_spacing"
                android:layout_marginRight="@dimen/mtrl_card_spacing"
                android:background="@color/md_theme_dark_primary"
                android:backgroundTint="@color/md_theme_dark_primary"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.MaterialCardView.Cut">

                <TextView
                    android:id="@+id/tvRole"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/md_theme_dark_primary"
                    android:gravity="center_vertical"
                    android:text="@string/random_role"
                    android:textColor="@color/md_theme_dark_inversePrimary"
                    android:textSize="16sp" />
            </com.google.android.material.card.MaterialCardView>





            <TextView
                android:id="@+id/tvUnfinished"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/number_of_unfinished_tasks"
                android:textColor="@color/md_theme_dark_onPrimary"
                android:textSize="20sp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="@dimen/mtrl_card_spacing"
                android:layout_marginTop="@dimen/mtrl_card_spacing"
                android:layout_marginRight="@dimen/mtrl_card_spacing"
                android:background="@color/md_theme_dark_primary"
                android:backgroundTint="@color/md_theme_dark_primary"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.MaterialCardView.Cut">

                <TextView
                    android:id="@+id/tvsDate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/md_theme_dark_primary"
                    android:gravity="center"
                    android:text="@string/_16"
                    android:textColor="@color/md_theme_dark_inversePrimary"
                    android:textSize="34sp" />
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tvProjectName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/toolbarsingleproject"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/project_x_info"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#081978"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarsingleproject" />

</androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.navigation.NavigationView
    android:id="@+id/nav_view"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    app:headerLayout="@layout/nav_header"
    app:menu="@menu/drawer_menu" />
</androidx.drawerlayout.widget.DrawerLayout>