<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#372859EC">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="138dp"
        android:layout_height="133dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="137dp"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="184dp"
        android:layout_height="85dp"
        android:layout_marginStart="114dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="113dp"
        android:backgroundTint="#3F51B5"
        android:clickable="true"
        android:enabled="true"
        android:focusable="true"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="184dp"
        android:layout_height="85dp"
        android:layout_marginStart="114dp"
        android:layout_marginEnd="113dp"
        android:backgroundTint="#2196F3"
        android:clickable="true"
        android:enabled="true"
        android:focusable="true"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignIn"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="330dp"
        android:layout_height="66dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="41dp"
        android:text="@string/project_planner"
        android:textColor="#3F51B5"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>